# opengl-lab-env

./: .gitignore  CMakeLists.txt  README.md
engine/core/: CMakeLists.txt
engine/render/: CMakeLists.txt  window.cc
projects/ImGuiExample/: CMakeLists.txt
projects/ImGuiExample/code/: exampleapp.cc  exampleapp.h
projects/assigment1/: CMakeLists.txt
projects/assigment1/code/: main.cc  slider.cc  slider.h  snowflakeapp.cc  snowflakeapp.h  snowflakeobj.cc  snowflakeobj.h
projects/assigment2/: CMakeLists.txt
projects/assigment2/code/: main.cc  reader.cc  reader.h  test1.txt  test2.txt  triangulation3d.cc  triangulation3d.h  triangulation3dapp.cc  triangulation3dapp.h
projects/example/: CMakeLists.txt
projects/example/code/: exampleapp.cc  exampleapp.h
vstudio/: AssignmentDemo.vcxproj
